# NotificationService

./: Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml  env-setup.sh
auth_service/: README.md  pyproject.toml  sample.env
auth_service/dev_tests/: conftest.py  misc.py  test_hash_service.py  test_jwt.py  test_password_validation.py
auth_service/src/: Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.txt
auth_service/src/auth_app/: main.py
auth_service/src/auth_app/api/: healthcheck.py  pagination.py  role_check.py
auth_service/src/auth_app/core/: config.py  jaeger.py  logger.py
auth_service/src/auth_app/db/: redis.py  sqlalchemy.py
auth_service/src/auth_app/errors/: api.py  base.py  external.py
auth_service/src/auth_app/services/: auth_service.py  hash_service.py  jwt_service.py  role_service.py  token_blacklist_service.py  user_role_service.py  user_service.py
auth_service/src/cli/: __main__.py  admin.py  init_service_accounts.py  user.py
auth_service/src/migrations/: env.py
auth_service/src/migrations/versions/: e4c2bfd0c193_user_social.py  f3886ec8e174_init.py  f7373607520a_additional_info.py
auth_service/tests/: .dockerignore  .test.env  Dockerfile  docker-compose.yaml  requirements.txt
auth_service/tests/functional/: conftest.py  settings.py
auth_service/tests/functional/fixtures/: api_fixtures.py  redis_fixtures.py
auth_service/tests/functional/src/: misc.py  test_login_history.py  test_logout.py  test_refresh.py  test_sign_in.py  test_sign_up.py
auth_service/tests/functional/testdata/: enums.py
notification_service/: Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
notification_service/src/: notification_worker.py  produce_once.py  rabbit_queues_setup.py  user_provider_worker.py
notification_service/src/container/: __init__.py  container.py  container_setup.py  service_token.py
notification_service/src/core/: logger_setup.py  settings.py  setup_queues.py
notification_service/src/db/: __init__.py  postgres.py  rabbit.py
notification_service/src/misc/: type_alias.py
notification_service/src/models/: __init__.py  notification_details.py  notification_status.py  queue_message.py  user.py
notification_service/src/resolver/: type_resolver.py  user_resolver.py
notification_service/src/services/: consumer.py  producer.py  task_status_service.py  user_provider.py
notification_service/src/services/notification_provider/: __init__.py  base_provider.py  smtp_provider.py  test_provider.py
(+112 files in other folders)
